[tool.poetry]
name = "snes-reader"
version = "0.1.0"
description = ""
authors = ["potatofish"]
readme = "README.md"
packages = [{include = "snes_reader"}]

[tool.poetry.dependencies]
python = "^3.8"
munch = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"